Deploypment_Israel/ecuacion-microservicios-mysql/k8s-manifests/almacenar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: almacenar
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: almacenar
  template:
    metadata:
      labels:
        app: almacenar
    spec:
      containers:
      - name: almacenar
        image: <tu-usuario>/almacenar:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: almacenar
  namespace: microservicios
spec:
  selector:
    app: almacenar
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
