Deploypment_Israel/ecuacion-microservicios-mysql/k8s-manifests/ecuacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecuacion
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecuacion
  template:
    metadata:
      labels:
        app: ecuacion
    spec:
      containers:
      - name: ecuacion
        image: <tu-usuario>/ecuacion:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ecuacion
  namespace: microservicios
spec:
  selector:
    app: ecuacion
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
