Deploypment_Israel/ecuacion-microservicios-mysql/k8s-manifests/resta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resta
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resta
  template:
    metadata:
      labels:
        app: resta
    spec:
      containers:
      - name: resta
        image: <tu-usuario>/resta:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: resta
  namespace: microservicios
spec:
  selector:
    app: resta
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
