Deploypment_Israel/ecuacion-microservicios-mysql/k8s-manifests/suma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suma
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suma
  template:
    metadata:
      labels:
        app: suma
    spec:
      containers:
      - name: suma
        image: <tu-usuario>/suma:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: suma
  namespace: microservicios
spec:
  selector:
    app: suma
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
