Deploypment_Israel/ecuacion-microservicios-mysql/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecuacion-ingress
  namespace: microservicios
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ecuacion.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecuacion
            port:
              number: 8000
